Byte code generator (#167)